# Projet-MLOps

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build-image.yml
app/: winequality.py
app/data/raw/: winequality-red.csv
app/data/training/: winequality-pred.py
monitoring/grafana/: Dockerfile
monitoring/prometheus/: Dockerfile  prometheus.yml
terraform/01_bootstrap/: main.tf  outputs.tf
terraform/02_deploy/: .terraform.lock.hcl  main.tf  providers.tf  role.tf  variables.tf  versions.tf
